force-app/main/default/objects/Transition__c/fields/Offered_Discount__c.field-meta.xml
<CustomField>
    <fullName>Offered_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These checkboxes are reasons for saving the Transition, please check this box if it applies.</description>
    <inlineHelpText>These checkboxes are reasons for saving the Transition, please check this box if it applies.</inlineHelpText>
    <label>Offered Discount</label>
    <type>Checkbox</type>
</CustomField>