force-app/main/default/objects/Transition__c/fields/Offered_Other_See_Notes__c.field-meta.xml
<CustomField>
    <fullName>Offered_Other_See_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These checkboxes are reasons for saving the Transition, please check this box no other Save Reasons apply. Must leave explanation in Save Notes.</inlineHelpText>
    <label>Offered Other (See Notes)</label>
    <type>Checkbox</type>
</CustomField>