force-app/main/default/objects/Transition__c/fields/Offered_Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>Offered_Priority_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These checkboxes are reasons for saving the Transition, please check this box if it applies.</inlineHelpText>
    <label>Offered Priority Service</label>
    <type>Checkbox</type>
</CustomField>