force-app/main/default/objects/Transition__c/fields/Offered_Upgrade_Downgrade__c.field-meta.xml
<CustomField>
    <fullName>Offered_Upgrade_Downgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These checkboxes are reasons for saving the Transition, please check this box if it applies.</inlineHelpText>
    <label>Offered Upgrade/Downgrade</label>
    <type>Checkbox</type>
</CustomField>