force-app/main/default/objects/Transition__c/fields/Other_Transition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Transition_Reason__c</fullName>
    <description>When client selects &quot;other&quot; for reason on form, they enter the details here.</description>
    <label>Other Transition Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>