force-app/main/default/objects/Transition__c/fields/PCRA__c.field-meta.xml
<CustomField>
    <fullName>PCRA__c</fullName>
    <description>Brokerage accounts allowed.</description>
    <inlineHelpText>Brokerage accounts allowed.</inlineHelpText>
    <label>PCRA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>