force-app/main/default/objects/Transition__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Term/Merger left for a PEP</description>
    <inlineHelpText>Term/Merger left for a PEP</inlineHelpText>
    <label>PEP</label>
    <type>Checkbox</type>
</CustomField>