force-app/main/default/objects/Transition__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Plan that is Transitioning</description>
    <inlineHelpText>Plan that is Transitioning</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Transitions</relationshipLabel>
    <relationshipName>Transitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>