force-app/main/default/objects/Transition__c/fields/Plan_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Plan_Custodian__c</fullName>
    <description>Custodian from the Plan record</description>
    <formula>TEXT(Plan__r.Custodian__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custodian from the Plan record</inlineHelpText>
    <label>Plan Custodian</label>
    <type>Text</type>
</CustomField>