force-app/main/default/objects/Transition__c/fields/Plan_Sold_Date_Transition__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sold_Date_Transition__c</fullName>
    <description>Pulls Plan Sold Date from Plan Object which originated from the Close Date of the Opportunity.  Will be used to help determine time the plan was with Ubiquity.</description>
    <formula>Plan__r.Plan_Sold_Date__c</formula>
    <inlineHelpText>Pulls Plan Sold Date from Plan Object which originated from the Close Date of the Opportunity.  Will be used to help determine time the plan was with Ubiquity.</inlineHelpText>
    <label>Plan Sold Date</label>
    <type>Date</type>
</CustomField>