force-app/main/default/objects/Transition__c/fields/RKO_Plan__c.field-meta.xml
<CustomField>
    <fullName>RKO_Plan__c</fullName>
    <description>Verify if this is an RKO Plan</description>
    <inlineHelpText>Verify if this is an RKO Plan</inlineHelpText>
    <label>RKO Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>