force-app/main/default/objects/Transition__c/fields/RKS_Mail_Restriction__c.field-meta.xml
<CustomField>
    <fullName>RKS_Mail_Restriction__c</fullName>
    <description>This field is to verify if a mail restriction exists in RKS. If it does, this will block a Deconversion from occurring.</description>
    <inlineHelpText>This field is to verify if a mail restriction exists in RKS. If it does, this will block a Deconversion from occurring.</inlineHelpText>
    <label>RKS Mail Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>