force-app/main/default/objects/Transition__c/fields/Safe_Harbor_Allocation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Allocation_Frequency__c</fullName>
    <description>Confirm Safe Harbor allocation frequency</description>
    <inlineHelpText>Confirm Safe Harbor allocation frequency</inlineHelpText>
    <label>Safe Harbor Allocation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of Plan Year</fullName>
            </value>
            <value>
                <fullName>Per Pay Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>