force-app/main/default/objects/Transition__c/fields/Safe_Harbor_Funded_In_Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Funded_In_Term_Year__c</fullName>
    <description>Confirm if Safe Harbor contributions were funded in current year</description>
    <inlineHelpText>Confirm if Safe Harbor contributions were funded in current year</inlineHelpText>
    <label>Safe Harbor Funded In Term Year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>