force-app/main/default/objects/Transition__c/fields/Safe_Harbor_Plan__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Plan__c</fullName>
    <description>Confirm if the plan has Safe Harbor</description>
    <inlineHelpText>Confirm if the plan has Safe Harbor</inlineHelpText>
    <label>Safe Harbor Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>