force-app/main/default/objects/Transition__c/fields/Save_Attempts_Exhausted__c.field-meta.xml
<CustomField>
    <fullName>Save_Attempts_Exhausted__c</fullName>
    <description>Date at which all save attempts have been exhausted and transition will move forward.</description>
    <inlineHelpText>Date at which all save attempts have been exhausted and transition will move forward.</inlineHelpText>
    <label>Save Attempts Exhausted</label>
    <type>Date</type>
</CustomField>