force-app/main/default/objects/Transition__c/fields/Save_Owner__c.field-meta.xml
<CustomField>
    <fullName>Save_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is in charge of the save attempt. This can be different than the Transition record owner.</description>
    <inlineHelpText>The user who is in charge of the save attempt. This can be different than the Transition record owner.</inlineHelpText>
    <label>Save Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>