force-app/main/default/objects/Transition__c/fields/Saved_Date__c.field-meta.xml
<CustomField>
    <fullName>Saved_Date__c</fullName>
    <description>Date Transition was saved</description>
    <inlineHelpText>Date Transition was saved</inlineHelpText>
    <label>Saved Date</label>
    <type>Date</type>
</CustomField>