force-app/main/default/objects/Transition__c/fields/Saved_Notes__c.field-meta.xml
<CustomField>
    <fullName>Saved_Notes__c</fullName>
    <description>Notes on efforts to save Client</description>
    <inlineHelpText>Notes on efforts to save Client</inlineHelpText>
    <label>Saved Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>