force-app/main/default/objects/Transition__c/fields/Sent_to_Penchecks__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Penchecks__c</fullName>
    <description>Date abandoned plan sent to Penchecks</description>
    <inlineHelpText>Date abandoned plan sent to Penchecks</inlineHelpText>
    <label>Sent to Penchecks</label>
    <type>Date</type>
</CustomField>