force-app/main/default/objects/Transition__c/fields/Service_Issue_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Issue_Details__c</fullName>
    <description>Populated from transition form</description>
    <label>Service Issue Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>