force-app/main/default/objects/Transition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>What is status of this transition request?</description>
    <inlineHelpText>What is status of this transition request?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial_Questionnaire_Sent</fullName>
                <label>Initial Questionnaire Sent</label>
            </value>
            <value>
                <fullName>Save in Process</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Final Questionnaire Sent</fullName>
            </value>
            <value>
                <fullName>DocuSign in Progress</fullName>
            </value>
            <value>
                <fullName>Transition Processes in Progress</fullName>
            </value>
            <value>
                <fullName>Final Valuation Complete</fullName>
            </value>
            <value>
                <fullName>Plan in Blackout</fullName>
            </value>
            <value>
                <fullName>Force Outs in Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Transition Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Final Clear Outs in Progress</fullName>
                <isActive>false</isActive>
                <label>Final Clear Outs in Progress</label>
            </value>
            <value>
                <fullName>Final Form 5500 in Progress</fullName>
                <isActive>false</isActive>
                <label>Final Form 5500 in Progress</label>
            </value>
            <value>
                <fullName>Initial Questionnaire Sent</fullName>
                <isActive>false</isActive>
                <label>Initial Questionnaire Sent</label>
            </value>
            <value>
                <fullName>Inquired</fullName>
                <isActive>false</isActive>
                <label>Inquired</label>
            </value>
            <value>
                <fullName>Notified</fullName>
                <isActive>false</isActive>
                <label>Notified</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>