force-app/main/default/objects/Transition__c/fields/TDA_or_Schwab_Trust__c.field-meta.xml
<CustomField>
    <fullName>TDA_or_Schwab_Trust__c</fullName>
    <description>These custodians have separate requirements and fees that must be addressed outside the regular Decon process (for Matrix and Schwab Broker/Dealer)</description>
    <inlineHelpText>These custodians have separate requirements and fees that must be addressed outside the regular Decon process (for Matrix and Schwab Broker/Dealer)</inlineHelpText>
    <label>TDA or Schwab Trust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>