force-app/main/default/objects/Transition__c/fields/Termination_Complete_Email__c.field-meta.xml
<CustomField>
    <fullName>Termination_Complete_Email__c</fullName>
    <label>Termination Complete Email</label>
    <type>Date</type>
</CustomField>