force-app/main/default/objects/Transition__c/fields/Termination_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Effective_Date__c</fullName>
    <description>Date Termination is effective</description>
    <label>Termination Effective Date</label>
    <type>Date</type>
</CustomField>