force-app/main/default/objects/Transition__c/fields/Termination_Information_Sent__c.field-meta.xml
<CustomField>
    <fullName>Termination_Information_Sent__c</fullName>
    <description>Termination Information email sent to Plan Sponsor.</description>
    <inlineHelpText>Please select a date the Termination Information was emailed to Plan Sponsor</inlineHelpText>
    <label>Termination Information Sent</label>
    <type>Date</type>
</CustomField>