force-app/main/default/objects/Transition__c/fields/TPA_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>TPA_Contact_Email__c</fullName>
    <inlineHelpText>Filled out in the Transition form. This field is CC&apos;d on all email communication.</inlineHelpText>
    <label>TPA Contact Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>