force-app/main/default/objects/Transition__c/fields/Transition_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Transition_Cancelled__c</fullName>
    <label>Transition Cancelled</label>
    <type>Date</type>
</CustomField>