force-app/main/default/objects/Transition__c/fields/Transition_Complete__c.field-meta.xml
<CustomField>
    <fullName>Transition_Complete__c</fullName>
    <formula>IF(
  (ISPICKVAL(Transition_Type__c, &quot;Deconversion&quot;)|| ISPICKVAL(Transition_Type__c, &quot;Termination/Merger&quot;)|| ISPICKVAL(Transition_Type__c, &quot;Abandonment&quot;))&amp;&amp; Liquidation_Date__c  &lt;= TODAY(), Liquidation_Date__c, 
IF(ISPICKVAL(Transition_Type__c, &quot;Contract Termination&quot;), Inquiry_Date__c, Final_Valuation_Completed__c ))</formula>
    <label>Transition Complete</label>
    <type>Date</type>
</CustomField>