force-app/main/default/objects/Transition__c/fields/Transition_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Transition_Form_Link__c</fullName>
    <description>Link used to send jotform to clients</description>
    <formula>&quot;https://forms.myubiquity.com/251384388831970?transitionidSFDC=&quot; + Id + &quot;&amp;currentplanName=&quot; + Plan__r.Name + &quot;&amp;transitiontypeSFDC=&quot; + TEXT(Transition_Type__c) + &quot;&amp;reasonforterminationSFDC=&quot; + TEXT(Transition_Reason__c) + &quot;&amp;transitionstatusSFDC=&quot; + TEXT( Status__c)+ &quot;&amp;trusteeadministratorEmail=&quot; + Trustee_Administrator_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Form Link</label>
    <type>Text</type>
</CustomField>