force-app/main/default/objects/Transition__c/fields/Transition_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Transition_Id_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Id (18 Char)</label>
    <type>Text</type>
</CustomField>