force-app/main/default/objects/Transition__c/fields/Transition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transition_Reason__c</fullName>
    <description>What is the reason for the transition? This is dependent on the transition type. If unable to obtain a reason from client, enter “No reason Given”</description>
    <inlineHelpText>What is the reason for the transition? This is dependent on the transition type. If unable to obtain a reason from client, enter “No reason Given”</inlineHelpText>
    <label>Transition Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin: Company acquired and merged with another plan</fullName>
                <isActive>false</isActive>
                <label>Admin: Company acquired and merged with another plan</label>
            </value>
            <value>
                <fullName>Admin: Forced – unpaid invoices</fullName>
                <isActive>false</isActive>
                <label>Admin: Forced – unpaid invoices</label>
            </value>
            <value>
                <fullName>Admin: No response / reason not provided</fullName>
                <isActive>false</isActive>
                <label>Admin: No response / reason not provided</label>
            </value>
            <value>
                <fullName>Admin: Other (write details in comments)</fullName>
                <isActive>false</isActive>
                <label>Admin: Other (write details in comments)</label>
            </value>
            <value>
                <fullName>Admin: Transition to Single K</fullName>
                <isActive>false</isActive>
                <label>Admin: Transition to Single K</label>
            </value>
            <value>
                <fullName>Advisor Initiated Move</fullName>
                <isActive>false</isActive>
                <label>Advisor Initiated Move</label>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
                <isActive>false</isActive>
                <label>Budget Constraints</label>
            </value>
            <value>
                <fullName>Company Acquired - Merged with Another Plan</fullName>
                <isActive>false</isActive>
                <label>Company Acquired - Merged with Another Plan</label>
            </value>
            <value>
                <fullName>Company Closing</fullName>
            </value>
            <value>
                <fullName>Costs: Lower fees</fullName>
                <isActive>false</isActive>
                <label>Costs: Lower fees</label>
            </value>
            <value>
                <fullName>Enhanced Offering</fullName>
                <isActive>false</isActive>
                <label>Enhanced Offering</label>
            </value>
            <value>
                <fullName>Features Not Offered</fullName>
                <isActive>false</isActive>
                <label>Features Not Offered</label>
            </value>
            <value>
                <fullName>Forced - Unpaid Invoice</fullName>
                <isActive>false</isActive>
                <label>Forced - Unpaid Invoice</label>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
                <label>Integration Issue(s)</label>
            </value>
            <value>
                <fullName>Integration Issues(s)</fullName>
                <isActive>false</isActive>
                <label>Integration Issues(s)</label>
            </value>
            <value>
                <fullName>Low Plan Participation</fullName>
                <isActive>false</isActive>
                <label>Low Plan Participation</label>
            </value>
            <value>
                <fullName>Moving to PEP/MEP</fullName>
                <isActive>false</isActive>
                <label>Moving to PEP/MEP</label>
            </value>
            <value>
                <fullName>Nonpayment</fullName>
                <isActive>false</isActive>
                <label>Nonpayment</label>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
                <isActive>false</isActive>
                <label>No Reason Given</label>
            </value>
            <value>
                <fullName>No-Start</fullName>
                <isActive>false</isActive>
                <label>No-Start</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ownership Leadership Change</fullName>
                <label>Ownership/Leadership Change</label>
            </value>
            <value>
                <fullName>Ownership/Leadership Change</fullName>
                <isActive>false</isActive>
                <label>Ownership/Leadership Change</label>
            </value>
            <value>
                <fullName>PriceCost</fullName>
                <label>Price/Cost</label>
            </value>
            <value>
                <fullName>Product: Better product functionality/features</fullName>
                <isActive>false</isActive>
                <label>Product: Better product functionality/features</label>
            </value>
            <value>
                <fullName>Product: Low plan participation</fullName>
                <isActive>false</isActive>
                <label>Product: Low plan participation</label>
            </value>
            <value>
                <fullName>Product: More accurate information</fullName>
                <isActive>false</isActive>
                <label>Product: More accurate information</label>
            </value>
            <value>
                <fullName>Restatement Fees</fullName>
                <isActive>false</isActive>
                <label>Restatement Fees</label>
            </value>
            <value>
                <fullName>Service: More professionalism</fullName>
                <isActive>false</isActive>
                <label>Service: More professionalism</label>
            </value>
            <value>
                <fullName>Service: Proactive, regular guidance</fullName>
                <isActive>false</isActive>
                <label>Service: Proactive, regular guidance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>