force-app/main/default/objects/Transition__c/fields/Transitions__c.field-meta.xml
<CustomField>
    <fullName>Transitions__c</fullName>
    <description>Used for totaling transitions objects</description>
    <formula>1</formula>
    <inlineHelpText>Used for totaling transitions objects</inlineHelpText>
    <label>Transitions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>