force-app/main/default/objects/Transition__c/fields/Trustee_Administrator_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Administrator_Email_Address__c</fullName>
    <description>Filled in from Transition JotForm. This is the email address where the DocuSign is sent.</description>
    <inlineHelpText>Filled in from Transition JotForm. This is the email address where the DocuSign is sent.</inlineHelpText>
    <label>Trustee/Administrator Email Address</label>
    <type>Email</type>
</CustomField>