force-app/main/default/objects/Transition__c/fields/Trustee_Administrator_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Administrator_Name__c</fullName>
    <description>Filled in from Transition JotForm. This is the recipient of the DocuSign package.</description>
    <inlineHelpText>Filled in from Transition JotForm. This is the recipient of the DocuSign package.</inlineHelpText>
    <label>Trustee/Administrator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>