force-app/main/default/objects/Transition__c/fields/Wire_Amount__c.field-meta.xml
<CustomField>
    <fullName>Wire_Amount__c</fullName>
    <label>Wire Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>