force-app/main/default/objects/Transition__c/fields/Wire_Date__c.field-meta.xml
<CustomField>
    <fullName>Wire_Date__c</fullName>
    <description>Wire date</description>
    <inlineHelpText>Wire date</inlineHelpText>
    <label>Wire Date</label>
    <type>Date</type>
</CustomField>