force-app/main/default/objects/Transition__c/recordTypes/X401_k_Contract_Termination.recordType-meta.xml
<RecordType>
    <fullName>X401_k_Contract_Termination</fullName>
    <active>true</active>
    <description>Used for when an implementation is complete, but the plan has $0 in assets</description>
    <label>401(k) Contract Termination</label>
</RecordType>