force-app/main/default/objects/Transition__c/recordTypes/X401_k_Deconversion.recordType-meta.xml
<RecordType>
    <fullName>X401_k_Deconversion</fullName>
    <active>true</active>
    <description>Record Type for 401(k) Deconversions</description>
    <label>401(k) Deconversion</label>
</RecordType>