force-app/main/default/objects/Transition__c/recordTypes/X401_k_Plan_Abandonment.recordType-meta.xml
<RecordType>
    <fullName>X401_k_Plan_Abandonment</fullName>
    <active>true</active>
    <description>Used for abandoned 401(k) Plans</description>
    <label>401(k) Plan Abandonment</label>
</RecordType>