force-app/main/default/objects/Transition__c/recordTypes/X401_k_Term_Merger.recordType-meta.xml
<RecordType>
    <fullName>X401_k_Term_Merger</fullName>
    <active>true</active>
    <description>Used for Termination/Mergers</description>
    <label>401(k) Term/Merger</label>
</RecordType>