force-app/main/default/objects/Transition__c/recordTypes/X401_k_Termination.recordType-meta.xml
<RecordType>
    <fullName>X401_k_Termination</fullName>
    <active>true</active>
    <description>Record Type for 401(k) Terminations</description>
    <label>401(k) Termination</label>
</RecordType>