force-app/main/default/objects/Transition__c/recordTypes/X401_k_to_Single_k_Downgrade.recordType-meta.xml
<RecordType>
    <fullName>X401_k_to_Single_k_Downgrade</fullName>
    <active>true</active>
    <description>Used when client moves 401(k) to Single(k)</description>
    <label>401(k) to Single(k) Downgrade</label>
</RecordType>